# FAST_API_PYTHON

./: README.md
app/: Dockerfile.txt  crud.py  database.py  docker-compose.yml  lits.md  main.py  makefile.txt  models.py  pyproject.toml
tests/: conftest.py  test_main.py
