[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.0"
databases = "^0.4.3"
pydantic = "^1.8.2"
alembic = "^1.7.4"
fastapi-pagination = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"
